correct text align

--- a/styles/main.css
+++ b/styles/main.css
@@ -35,6 +35,7 @@ footer {
 .image-with-text {
   position: relative;
   display: inline-block;
+  text-align: center;
 }
 
 .image-with-text img {
@@ -49,6 +50,7 @@ footer {
   transform: translate(-50%, -50%);
   color: black;
   font-size: 25px;
+  text-align: left;
 }
 .image-with-text:hover {
   opacity: 50%;
